--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ captures/
 .idea/modules.xml
 .idea/dictionaries
 .idea/libraries
+.idea/caches/build_file_checksums.ser
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
